<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="setting" android:title="@string/action_settings" >

        <Preference
            android:key="pattern"
            android:title="@string/settings_pattern" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="about" android:title="@string/category_about" >

        <Preference
            android:key="version"
            android:title="@string/settings_version" />

        <Preference
            android:key="github"
            android:title="@string/settings_github" />

        <Preference
            android:key="weibo"
            android:title="@string/settings_weibo" />

        <Preference
            android:key="email"
            android:title="@string/email" />

        <Preference
            android:key="crash"
            android:title="@string/settings_crash" />

    </PreferenceCategory>
</PreferenceScreen>