<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card">
    <LinearLayout
        android:id="@+id/header"
        android:paddingTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:id="@id/event_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_count_text"
            android:layout_marginRight="5dp"/>
        <TextView
            android:id="@+id/event_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="0"/>
        <TextView
            android:id="@+id/thought_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thought_count_text"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginRight="5dp"/>
        <TextView
            android:id="@+id/thought_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:text="0"/>
    </LinearLayout>

    <TextView
        android:id="@+id/open_app"
        android:paddingLeft="16dp"
        android:paddingBottom="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|bottom"
        android:text="@string/app_name"/>
    <TextView
        android:id="@+id/add_event"
        android:paddingRight="16dp"
        android:paddingBottom="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:text="@string/add_event_widget"/>
</FrameLayout>